# hll_game_monitor

./: README.md  pyproject.toml
src/hll_game_monitor/: __init__.py  cli.py  types.py  utils.py
src/hll_game_monitor/pollers/: game_state.py  logs.py  player_state.py
src/tests/: test_state_change.py  test_utils.py
